--- a/finance-app/login.html
+++ b/finance-app/login.html
@@ -910,6 +910,11 @@
                         </svg>
                     </button>
                 </div>
+                <div style="text-align: right; margin-top: 8px;">
+                    <a href="forgot-password.html"
+                        style="font-size: 0.85rem; color: var(--color-primary); text-decoration: none; font-weight: 500;">Forgot
+                        Password?</a>
+                </div>
             </div>
             <button type="submit" class="btn btn-primary btn-full">Login</button>
         </form>
