bug and changes are fixed

--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -338,6 +338,7 @@
                                         <th>Amount</th>
                                         <th>Type</th>
                                         <th>Status</th>
+                                        <th>Created By</th>
                                     </tr>
                                 </thead>
                                 <tbody id="recentTransactions">
