--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -23,6 +23,7 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/invoice-clean-ui.css">
 </head>
 
 <body>
