bug fix and update

--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -113,7 +113,7 @@
                             <span>Clients</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item admin-only">
                         <a href="#investments" class="nav-link" data-page="investments">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M22 12h-4l-3 9L9 3l-3 9H2" />
@@ -886,11 +886,6 @@
                                             <label>Full Name</label>
                                             <input type="text" id="pageProfileName" required class="form-control">
                                         </div>
-                                        <div class="form-group">
-                                            <label>Phone Number</label>
-                                            <input type="tel" id="pageProfilePhone" class="form-control"
-                                                placeholder="+91 XXXXX XXXX">
-                                        </div>
                                     </div>
                                     <div class="form-group">
                                         <label>Email Address</label>
@@ -997,10 +992,7 @@
                                     <label for="settingsAgencyName">Agency Name</label>
                                     <input type="text" id="settingsAgencyName" placeholder="Your Agency Name">
                                 </div>
-                                <div class="form-group">
-                                    <label for="settingsAgencyContact">Contact Number</label>
-                                    <input type="text" id="settingsAgencyContact" placeholder="+91 XXXXXXXXXX">
-                                </div>
+                                <!-- Contact Number removed as per request -->
                                 <div class="form-group">
                                     <label for="settingsAgencyEmail">Email</label>
                                     <input type="email" id="settingsAgencyEmail" placeholder="hello@agency.com">
