--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -858,6 +858,15 @@
                                 <input type="date" id="pcFilterEndDate" class="filter-input">
                             </div>
                         </div>
+                        <div class="filter-group">
+                            <label>Status</label>
+                            <select id="pcFilterStatus" class="filter-select">
+                                <option value="">All Status</option>
+                                <option value="approved">Approved</option>
+                                <option value="pending">Pending</option>
+                                <option value="declined">Declined</option>
+                            </select>
+                        </div>
                         <button class="btn btn-secondary" id="pcClearFilters">Clear Filters</button>
                     </div>
 
@@ -871,6 +880,7 @@
                                     <th>Description</th>
                                     <th>Category</th>
                                     <th>Amount</th>
+                                    <th>Status</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
