--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -1523,7 +1523,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="pcFundDate">Date *</label>
-                        <input type="date" id="pcFundDate" required value="${new Date().toISOString().split('T')[0]}">
+                        <input type="date" id="pcFundDate" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -1565,8 +1565,7 @@
                     </div>
                     <div class="form-group">
                         <label for="pcExpenseDate">Date *</label>
-                        <input type="date" id="pcExpenseDate" required
-                            value="${new Date().toISOString().split('T')[0]}">
+                        <input type="date" id="pcExpenseDate" required>
                     </div>
                 </div>
                 <div class="form-group">
