--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -867,6 +867,7 @@
                             <thead>
                                 <tr>
                                     <th>Date</th>
+                                    <th>Type</th>
                                     <th>Added By</th>
                                     <th>Description</th>
                                     <th>Category</th>
@@ -886,8 +887,8 @@
                                 <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
                                 <path d="M14 2v6h6" />
                             </svg>
-                            <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">No petty cash expenses yet</h3>
-                            <p style="color: var(--color-text-secondary);">Add an expense to start tracking</p>
+                            <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">No petty cash transactions yet</h3>
+                            <p style="color: var(--color-text-secondary);">Add a transaction to start tracking</p>
                         </div>
                     </div>
                 </section>
@@ -1344,47 +1345,7 @@
     </div>
     </div>
 
-    <!-- Petty Cash Entry Modal -->
-    <div class="modal-overlay" id="pettyCashModal">
-        <div class="modal-container">
-            <div class="modal-header">
-                <h3 id="pettyCashModalTitle">Add Petty Cash Expense</h3>
-                <button class="btn-icon" id="closePettyCashModal">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M18 6L6 18M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-            <form id="pettyCashForm" class="modal-form">
-                <input type="hidden" id="pettyCashEntryId">
-                <div class="form-group">
-                    <label for="pcDescription">Description *</label>
-                    <input type="text" id="pcDescription" required placeholder="e.g. Office Tea, Stationery">
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="pcAmount">Amount *</label>
-                        <input type="number" id="pcAmount" required min="0" step="0.01" placeholder="0.00">
-                    </div>
-                    <div class="form-group">
-                        <label for="pcCategory">Category</label>
-                        <select id="pcCategory">
-                            <option value="Food">Food & Beverages</option>
-                            <option value="Supplies">Office Supplies</option>
-                            <option value="Travel">Travel</option>
-                            <option value="Repairs">Repairs</option>
-                            <option value="Other">Other</option>
-                        </select>
-                    </div>
-                </div>
-                <!-- Logic note: Date defaults to today in JS if not present, simple form to start -->
-                <div class="modal-actions">
-                    <button type="button" class="btn btn-secondary" id="cancelPettyCash">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Save Expense</button>
-                </div>
-            </form>
-        </div>
-    </div>
+
 
     <!-- Profile Modal -->
     <!-- Profile Modal Removed (Moved to Profile Page) -->
