confirm box updated

--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -1569,7 +1569,7 @@
 
     <!-- Confirmation Modal -->
     <div class="modal-overlay" id="confirmationModal">
-        <div class="modal modal-sm">
+        <div class="modal modal-sm confirm-modal">
             <div class="modal-header">
                 <h3 id="confirmTitle">Confirm Action</h3>
                 <button class="modal-close" id="closeConfirmModal">
