invoice updated and forgot password reset updated

--- a/finance-app/index.html
+++ b/finance-app/index.html
@@ -224,6 +224,10 @@
                         <input type="text" placeholder="Search..." id="globalSearch">
                     </div>
                     <div class="user-profile">
+                        <div class="user-info-text">
+                            <span class="user-name" id="headerUserName">Loading...</span>
+                            <span class="user-role-badge" id="headerUserRole">Role</span>
+                        </div>
                         <div class="avatar cursor-pointer" id="headerAvatar" title="Go to Profile">
                             <span>CA</span>
                         </div>
