forgot password update

--- a/finance-app/forgot-password.html
+++ b/finance-app/forgot-password.html
@@ -122,48 +122,43 @@
             successMsg.style.display = 'none';
 
             try {
-                // Call Secure RPC to check role and handle logic server-side
-                const { data: result, error: rpcError } = await supabaseClient.rpc('request_password_reset', {
-                    email_input: email
-                });
+                // 1. Check if email belongs to an employee
+                const { data: isEmployee, error: checkError } = await supabaseClient
+                    .rpc('is_employee_email', { check_email: email });
 
-                if (rpcError) throw rpcError;
+                if (checkError) {
+                    console.warn('Employee check error:', checkError);
+                }
 
-                const status = result?.status;
+                if (isEmployee === true) {
+                    // 2. Identify and Notify Admin
+                    submitBtn.textContent = 'Notifying Admin...';
+                    const { data: notified, error: notifError } = await supabaseClient
+                        .rpc('request_employee_password_reset_notification', { target_email: email });
 
-                if (status === 'employee_approval_needed') {
-                    // Employee Flow: Notification was created by the RPC
+                    if (notifError) throw notifError;
+
                     successMsg.innerHTML = '<strong>Request Sent!</strong><br>Your admin has been notified. Once they grant approval, you will be able to reset your password.';
                     successMsg.style.display = 'block';
                     form.style.display = 'none';
-
-                } else if (status === 'allowed') {
-                    // Admin Flow: Proceed to send email
-                    const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-                        redirectTo: window.location.origin + '/reset-password.html',
-                    });
-
-                    if (error) throw error;
-
-                    successMsg.innerHTML = '<strong>Check your email!</strong><br>We have sent a password reset link to your address.';
-                    successMsg.style.display = 'block';
-                    form.style.display = 'none';
-
-                } else {
-                    // Not Found or Other
-                    // For security, behave as if sent, or show error if you prefer
-                    // Here showing standard message to avoid user enumeration if desired, 
-                    // OR specifically saying 'User not found' if you prefer UX over strict privacy.
-                    // Given the request context:
-                    errorMsg.textContent = 'No account found with this email.';
-                    errorMsg.style.display = 'block';
-                    submitBtn.disabled = false;
-                    submitBtn.textContent = 'Send Reset Link';
+                    return;
                 }
+
+                // 3. Admin or Not Found Flow: Proceed with standard reset for non-employees
+                submitBtn.textContent = 'Sending Link...';
+                const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                    redirectTo: window.location.origin + '/reset-password.html',
+                });
+
+                if (error) throw error;
+
+                successMsg.innerHTML = '<strong>Check your email!</strong><br>We have sent a password reset link to your address.';
+                successMsg.style.display = 'block';
+                form.style.display = 'none';
 
             } catch (error) {
                 console.error('Reset error:', error);
-                errorMsg.textContent = 'An error occurred. Please try again.';
+                errorMsg.textContent = error.message.includes('User not found') ? 'No account found with this email.' : 'An error occurred. Please try again.';
                 errorMsg.style.display = 'block';
                 submitBtn.disabled = false;
                 submitBtn.textContent = 'Send Reset Link';
